--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -48,7 +48,7 @@ en:
     omniauth_callbacks:
       success: 'Successfully authorized from %{kind} account.'
       failure: 'Could not authorize you from %{kind} because "%{reason}".'
-      noemail: 'Could not find your email address in %{kind}. Account could not be created. '
+      noemail: 'Could not find your email address in your %{kind} public data. Account could not be created.'
     mailer:
       confirmation_instructions:
         subject: 'Confirmation instructions'
